# BookNest

./: .gitignore  README.md
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  req.txt  user_ratings.csv  wait-for-db.sh
server/BookNest/: celery.py  docker_settings.py  settings.py  urls.py
server/apps/books/: __init__.py  admin.py  apps.py  logging_config.py  managers.py  models.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
server/apps/collections/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
server/apps/common/: models.py  pagination.py
server/apps/follows/: apps.py  managers.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
server/apps/integrations/: admin.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
server/apps/notifications/: admin.py  apps.py  managers.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
server/apps/operations/: admin.py  models.py  serializers.py  urls.py  views.py
server/apps/recommendation/: apps.py  managers.py  models.py  recommendation_engine.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
server/apps/recommendations/: admin.py  apps.py  models.py  recommendation_engine.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
server/apps/reviews/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
server/apps/search/: admin.py  models.py  selectors.py  serializers.py  services.py  tasks.py  urls.py  views.py
server/apps/social/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
server/apps/users/: adapter.py  admin.py  apps.py  managers.py  middleware.py  models.py  permissions.py  schema.py  selectors.py  serializers.py  services.py  signals.py  urls.py  user_data_serializer.py  user_data_view.py  views.py
server/books/: admin.py  logging_config.py  models.py  tasks.py  urls.py
server/books/migrations/: 0001_initial.py  0002_initial.py  0003_alter_bookauthor_options_and_more.py  0004_alter_book_options_author_author_name_idx_and_more.py  0005_author_data_quality_author_last_updated_and_more.py  0006_reviewupvote_bookreview_updated_at_and_more.py  0007_bookreview_downvotes_count_reviewvote.py  0008_enable_postgres_extensions.py  0009_remove_book_book_title_idx_and_more.py  0010_book_book_search_vector_idx.py  0011_genre.py  0012_book_genres_delete_bookgenre.py  0013_book_language_alter_book_source_and_more.py  0014_remove_author_author_birth_date_idx_and_more.py  0015_book_external_id_book_external_source.py  0016_remove_book_external_id_remove_book_external_source.py
server/books/serializers/: book_serializers.py  review_serializers.py
server/books/tests/: test_api.py
server/books/utils/: author_info_service.py  book_normalizer.py  book_service.py  external_api_clients.py  search_service.py
server/books/views/: __init__.py  reading_list_views.py  review_views.py  search_views.py  suggestion_views.py  upvote_views.py  views.py  vote_views.py
server/config/: asgi.py  celery.py  urls.py  wsgi.py
server/config/settings/: base.py  development.py  production.py  testing.py
server/follows/: apps.py  models.py  serializers.py  signals.py  urls.py
server/follows/migrations/: 0001_initial.py
server/follows/tests/: test_api.py  test_models.py
server/follows/views/: __init__.py  follow_views.py
server/media/recommendation_models/: knn_20250516_183730.pkl  svd_20250515_214115.pkl  svd_20250517_185551.pkl
server/notifications/: models.py  services.py  signals.py  urls.py
server/notifications/migrations/: 0001_initial.py  0002_rename_notif_recipient_idx_notificatio_recipie_be3f1a_idx_and_more.py
server/notifications/tests/: test_api.py  test_models.py
server/notifications/views/: notification_type_views.py  notification_views.py
server/recommendation/: apps.py  models.py  recommendation_engine.py  serializers.py  services.py  signals.py  utils.py
server/recommendation/migrations/: 0001_initial.py  0002_initial.py
server/recommendation/views/: manual_trigger_views.py
server/users/: adapter.py  apps.py  signals.py  urls.py  user_data_serializer.py  user_data_view.py
server/users/migrations/: 0001_initial.py  0002_alter_profile_profile_pic.py  0003_alter_profile_profile_pic.py  (+1 more)
server/users/models/: profile.py
(+445 files in other folders)
