[project]
name = "booknest-backend"
version = "0.1.0"
requires-python = ">=3.14.4"
dependencies = []

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ipython>=9.13.0",
]
prod = [
    "aiohttp>=3.13.5",
    "celery>=5.6.3",
    "cloudinary>=1.44.2",
    "dj-rest-auth>=7.2.0",
    "django==6.0.4",
    "django-allauth>=65.16.1",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "mysqlclient>=2.2.8",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "whitenoise>=6.12.0",
]
test = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.uv]
default-groups = ["prod", "dev", "test"]
