[project]
name = "booknest-backend"
version = "0.1.0"
requires-python = ">=3.14.4"
dependencies = []

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "django-stubs[compatible-mypy]>=6.0.3",
    "ipython>=9.13.0",
    "mypy>=1.19.1",
    "ruff>=0.14.0",
    "types-python-dateutil>=2.9.0.20250822",
    "types-requests>=2.32.4.20260402",
]
prod = [
    "celery>=5.6.3",
    "cloudinary>=1.44.2",
    "dj-rest-auth>=7.2.0",
    "django==6.0.5",
    "django-allauth>=65.16.1",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "mysqlclient>=2.2.8",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "whitenoise>=6.12.0",
]
test = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.uv]
default-groups = ["prod", "dev", "test"]

[tool.ruff]
extend-exclude = ["**/migrations/*.py"]
line-length = 119
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/*.py" = [
    "ANN",
    "BLE001",
    "C901",
    "COM812",
    "D",
    "DJ012",
    "EM101",
    "EXE001",
    "FBT",
    "FIX002",
    "FURB157",
    "PLC0415",
    "PLR",
    "PT009",
    "PYI041",
    "RET504",
    "RUF001",
    "RUF012",
    "S",
    "SLF001",
    "TD",
    "TRY",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = false
ignore_missing_imports = true
disable_error_code = [
    "misc",
    "no-any-return",
    "no-untyped-call",
    "no-untyped-def",
    "type-arg",
    "untyped-decorator",
    "var-annotated",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"

[tool.django-stubs]
django_settings_module = "config.settings.testing"
